--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -29,10 +29,13 @@
     .kutikomi
       %a.twitter-hashtag-button{"data-show-count" => "false", :href => "https://twitter.com/intent/tweet?button_hashtag=一やのごはん&ref_src=twsrc%5Etfw"} Tweet #一やのごはん
       %script{:async => "", :charset => "utf-8", :src => "https://platform.twitter.com/widgets.js"}
+      %br/
+      ↑感想はこちらまで
 
       %iframe{:height => "95%", :src => "https://www.picuki.com/tag/%E4%B8%80%E3%82%84%E3%81%AE%E3%81%94%E3%81%AF%E3%82%93", :width => "100%"}
 
         
+    %br/
     %iframe{:allowfullscreen => "", "aria-hidden" => "false", :frameborder => "0", :height => "300", :src => "https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13294.78793191065!2d130.407562!3d33.587216!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5733605b14d1e388!2z5LiA44KE44Gu44GU44Gv44KT5pil5ZCJ5bqX!5e0!3m2!1sja!2sjp!4v1589362041279!5m2!1sja!2sjp", :style => "border:0;", :tabindex => "0", id: "map"}
 
 
