--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -1,6 +1,6 @@
 .wrapper
   .top_contents
-    = image_tag 'pic/shoptop'
+    = image_tag 'pic/shoptop', width: '100%'
   .header
     .shop_name 一やのごはん
 
