--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -10,17 +10,17 @@
       %h4 ギャラリー
 
       %a{:href => 'https://www.picuki.com/tag/%E4%B8%80%E3%82%84%E3%81%AE%E3%81%94%E3%81%AF%E3%82%93'}
-        .menu 
-          = image_tag 'pic/shopexit', width: '50%'
-          = image_tag 'pic/shopin', width: '50%'
+        .menu
+          = image_tag 'pic/shopexit', :width => '50%', :height => '100%'
+          = image_tag 'pic/shopin', :width => '50%', :height => '100%'
           
       %a{:href => 'https://www.instagram.com/explore/tags/%E4%B8%80%E3%82%84%E3%81%AE%E3%81%94%E3%81%AF%E3%82%93/'}
         .menu
-          = image_tag 'pic/meet2', width: '20%'
-          = image_tag 'pic/meet3', width: '20%'
-          = image_tag 'pic/fish', width: '20%'
-          = image_tag 'pic/toufu', width: '20%'
-          = image_tag 'pic/toufu2', width: '20%'
+          = image_tag 'pic/meet2', :width => '20%', :height => '50%'
+          = image_tag 'pic/meet3', :width => '20%', :height => '50%'
+          = image_tag 'pic/fish', :width => '20%', :height => '50%'
+          = image_tag 'pic/toufu', :width => '20%', :height => '50%'
+          = image_tag 'pic/toufu2', :width => '20%', :height => '50%'
 
       .menu
         %a{:href => 'https://www.picuki.com/tag/%E4%B8%80%E3%82%84%E3%81%AE%E3%81%94%E3%81%AF%E3%82%93', id: "button"}
