--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -8,7 +8,8 @@
   .header{
     text-align: center;
     .shop_name{
-      font-size: xxx-large;
+      letter-spacing: 10px;
+      font-size: 350%;
       color:#000000;
       font-weight: bold;
       
