--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -1,6 +1,6 @@
 .wrapper
-  .top_contents
-    = image_tag 'pic/shoptop', width: '100%'
+  -# .top_contents
+  -#   = image_tag 'pic/shoptop', width: '100%'
   .header
     .shop_name 一やのごはん
 
@@ -48,7 +48,7 @@
           %li [月〜土曜日]
           %br/
           %li 昼  11:30～15:00
-          %li 夜  18:00～24:00
+          %li 夜  18:00～22:30
       .holiday
         %ul.list
           %li [定休日]
