--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -31,6 +31,8 @@
       padding: 0.25em 1em;
       border: solid 2px #FFB6C1;
       border-radius: 3px 0 3px 0;
+      text-decoration: none;
+      
 
       h4:before, h4:after {
         content: '';
@@ -56,27 +58,35 @@
     .menu{
       display: flex;
       #button{
+        color: #000080;
         margin: 20px auto;
         text-align: center;
         text-decoration: none;
       }
-      a:visited{
-        color: #FFB6C1;
-      }
-
     }
     
+    
     .kutikomi{
+      color: #000080;
       height: 500px;
     }
-
+    
     #map{
       width: 100%;
       padding-top: 10px;
-
+      
     }
   }
   
+  a{
+     text-decoration: none;
+    }
+  
+  a:hover {
+    text-decoration:underline;
+    }
+
+
   .footer{
     width: 60%;
     margin: auto;
