--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -7,7 +7,8 @@
 
   .main_contents
     .menu_gallery
-      %h4 ギャラリー
+      %a{:href => 'https://www.instagram.com/explore/tags/%E4%B8%80%E3%82%84%E3%81%AE%E3%81%94%E3%81%AF%E3%82%93/'}
+        %h4 ギャラリー
 
       %a{:href => 'https://www.picuki.com/tag/%E4%B8%80%E3%82%84%E3%81%AE%E3%81%94%E3%81%AF%E3%82%93'}
         .menu
