--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -5,54 +5,66 @@
     .shop_name 一やのごはん
 
 
-  .main_contents
-    .menu_gallery
-      %a{:href => 'https://www.instagram.com/explore/tags/%E4%B8%80%E3%82%84%E3%81%AE%E3%81%94%E3%81%AF%E3%82%93/'}
-        %h4 ギャラリー
+  .menu_gallery
+    %a{:href => 'https://www.instagram.com/explore/tags/%E4%B8%80%E3%82%84%E3%81%AE%E3%81%94%E3%81%AF%E3%82%93/'}
+      .contents_bar ギャラリー
 
-      %a{:href => 'https://www.picuki.com/tag/%E4%B8%80%E3%82%84%E3%81%AE%E3%81%94%E3%81%AF%E3%82%93'}
-        .menu
-          = image_tag 'pic/shopexit', :width => '50%', :height => '100%'
-          = image_tag 'pic/shopin', :width => '50%', :height => '100%'
-          
-      %a{:href => 'https://www.instagram.com/explore/tags/%E4%B8%80%E3%82%84%E3%81%AE%E3%81%94%E3%81%AF%E3%82%93/'}
-        .menu
-          = image_tag 'pic/meet2', :width => '20%', :height => '50%'
-          = image_tag 'pic/meet3', :width => '20%', :height => '50%'
-          = image_tag 'pic/fish', :width => '20%', :height => '50%'
-          = image_tag 'pic/toufu', :width => '20%', :height => '50%'
-          = image_tag 'pic/toufu2', :width => '20%', :height => '50%'
-
+    %a{:href => 'https://www.picuki.com/tag/%E4%B8%80%E3%82%84%E3%81%AE%E3%81%94%E3%81%AF%E3%82%93'}
       .menu
-        %a{:href => 'https://www.picuki.com/tag/%E4%B8%80%E3%82%84%E3%81%AE%E3%81%94%E3%81%AF%E3%82%93', id: "button"}
-          ＞＞もっと詳しく見る
+        = image_tag 'pic/shopexit', :width => '50%', :height => '100%'
+        = image_tag 'pic/shopin', :width => '50%', :height => '100%'
+        
+    %a{:href => 'https://www.instagram.com/explore/tags/%E4%B8%80%E3%82%84%E3%81%AE%E3%81%94%E3%81%AF%E3%82%93/'}
+      .menu
+        = image_tag 'pic/meet2', :width => '20%', :height => '50%'
+        = image_tag 'pic/meet3', :width => '20%', :height => '50%'
+        = image_tag 'pic/fish', :width => '20%', :height => '50%'
+        = image_tag 'pic/toufu', :width => '20%', :height => '50%'
+        = image_tag 'pic/toufu2', :width => '20%', :height => '50%'
+
+    .menu
+      %a{:href => 'https://www.picuki.com/tag/%E4%B8%80%E3%82%84%E3%81%AE%E3%81%94%E3%81%AF%E3%82%93', id: "button"}
+        ＞＞もっと詳しく見る
     
-    .kutikomi
-      %a.twitter-hashtag-button{"data-show-count" => "false", :href => "https://twitter.com/intent/tweet?button_hashtag=一やのごはん&ref_src=twsrc%5Etfw"} Tweet #一やのごはん
-      %script{:async => "", :charset => "utf-8", :src => "https://platform.twitter.com/widgets.js"}
-      %br/
+  .infomation
+    %a.twitter-hashtag-button{"data-show-count" => "false", :href => "https://twitter.com/intent/tweet?button_hashtag=一やのごはん&ref_src=twsrc%5Etfw"} Tweet #一やのごはん
+    %script{:async => "", :charset => "utf-8", :src => "https://platform.twitter.com/widgets.js",id: "twitter"}
+    %br/
+    .comment_twitter
       ↑感想はこちらまで
 
-      %iframe{:height => "95%", :src => "https://www.picuki.com/tag/%E4%B8%80%E3%82%84%E3%81%AE%E3%81%94%E3%81%AF%E3%82%93", :width => "100%"}
-
+    .recruit
+      .comment_recruit  
+        .recruit_title  アルバイトスタッフ募集中
+        %ul.list
+          %li 時間：１８：００〜２４：００
+          ※時間帯相談に応じます
+          %li 時給：８５０円〜 
+          (２２時以降９００円)
         
+
+  .footer
+    .comment_last #インスタグラム投稿　下部をスクロールして下さい
+
+    .kutikomi
+      %iframe{:height => "95%", :src => "https://www.picuki.com/tag/%E4%B8%80%E3%82%84%E3%81%AE%E3%81%94%E3%81%AF%E3%82%93", :width => "100%"}
+      
     %br/
     %iframe{:allowfullscreen => "", "aria-hidden" => "false", :frameborder => "0", :height => "300", :src => "https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13294.78793191065!2d130.407562!3d33.587216!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5733605b14d1e388!2z5LiA44KE44Gu44GU44Gv44KT5pil5ZCJ5bqX!5e0!3m2!1sja!2sjp!4v1589362041279!5m2!1sja!2sjp", :style => "border:0;", :tabindex => "0", id: "map"}
 
-
-  .footer
-    .footer_title
-      営業時間
     .bussiness_hours
-      .openday
-        %ul.list
-          %li [月〜土曜日]
-          %br/
-          %li 昼  11:30～15:00
-          %li 夜  18:00～22:30
-      .holiday
-        %ul.list
-          %li [定休日]
-          %br/
-          %li 日曜日
+      .hours_title
+        営業時間
+      .hours_list
+        .openday
+          %ul.list
+            %li [月〜土曜日]
+            %br/
+            %li 昼  １１：３０～１５：００
+            %li 夜  １８：００～２２：３０
+        .holiday
+          %ul.list
+            %li [定休日]
+            %br/
+            %li 日曜日
 
