--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,8 @@
 %html
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
-    
+    %meta{:content => "GYYY3dgHe2oiOyDEJGGrHTR_Mce9_ZZ81Fh52L1ji3Q", :name => "google-site-verification"}/
+
     %title 一やのごはん
     = csrf_meta_tags
     = csp_meta_tag
