--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -2,7 +2,13 @@
   -# .top_contents
   -#   = image_tag 'pic/shoptop', width: '100%'
   .header
-    .shop_name 一やのごはん
+    .shop_name_ruby
+      かずやのごはん
+    .shop_name 
+      一やのごはん
+      
+        
+
 
 
   .menu_gallery
@@ -41,6 +47,15 @@
           ※時間帯相談に応じます
           %li 時給：８５０円〜 
           (２２時以降９００円)
+          ※日曜日定休日
+          %li 嬉しいまかない付き！
+          ダブルワークの方も大歓迎！！！
+          %br/
+          お気軽にご連絡下さい
+          %br/
+          &#x1f60a;&#x1f60a;
+          %a{:href => "”tel”"}092-738-8175
+          &#x1f60a;&#x1f60a;
         
 
   .footer
