--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -54,7 +54,7 @@
           お気軽にご連絡下さい
           %br/
           &#x1f60a;&#x1f60a;
-          %a{:href => "”tel”"}092-738-8175
+          %a{:href => "tel:"} 092-738-8175
           &#x1f60a;&#x1f60a;
         
 
