--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -86,6 +86,14 @@
         font-size: 150%;
         text-align: center;
         color: red;
+
+        
+      }
+
+      @media (min-width: 768px) {
+        a[href^="tel:"] {
+          pointer-events: none;
+        }
       }
 
     }
