--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -54,12 +54,12 @@
           お気軽にご連絡下さい
           %br/
           &#x1f60a;&#x1f60a;
-          %a{:href => "tel:"} 092-738-8175
+          %a{:href => "tel:0927388175"} 092-738-8175
           &#x1f60a;&#x1f60a;
         
 
   .footer
-    .comment_last #インスタグラム投稿　下部をスクロールして下さい
+    .comment_last #インスタグラム　口コミ　下部をスクロールして下さい
 
     .kutikomi
       %iframe{:height => "95%", :src => "https://www.picuki.com/tag/%E4%B8%80%E3%82%84%E3%81%AE%E3%81%94%E3%81%AF%E3%82%93", :width => "100%"}
