--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -68,18 +68,19 @@
     %iframe{:allowfullscreen => "", "aria-hidden" => "false", :frameborder => "0", :height => "300", :src => "https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13294.78793191065!2d130.407562!3d33.587216!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5733605b14d1e388!2z5LiA44KE44Gu44GU44Gv44KT5pil5ZCJ5bqX!5e0!3m2!1sja!2sjp!4v1589362041279!5m2!1sja!2sjp", :style => "border:0;", :tabindex => "0", id: "map"}
 
     .bussiness_hours
-      .hours_title
-        営業時間
-      .hours_list
-        .openday
-          %ul.list
-            %li [月〜土曜日]
-            %br/
-            %li 昼  １１：３０～１５：００
-            %li 夜  １８：００～２２：３０
-        .holiday
-          %ul.list
-            %li [定休日]
-            %br/
-            %li 日曜日
+      .bussiness_hours_box
+        .hours_title
+          営業時間
+        .hours_list
+          .openday
+            %ul.list
+              %li [月〜土曜日]
+              %br/
+              %li 昼  １１：３０～１５：００
+              %li 夜  １８：００～２２：３０
+          .holiday
+            %ul.list
+              %li [定休日]
+              %br/
+              %li 日曜日
 
